--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  tunesearchexample_mockcore: ^0.0.2
+  logger: ^0.6.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
